add donut recipe to image

--- a/index.html
+++ b/index.html
@@ -104,11 +104,13 @@
         <h3>CHIA PUDDING</h3>
         <p>milk, chia seeds, sugar to taste, and vanilla</p>
       </div>
-      <div class="recipe-card">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS6bGkxH9YZuV7mFUiw6TEdzmhjRUsofd2eRg&s" alt="donuts" />
-        <h3>DONUTS</h3>
-        <p> A sweet circle of happiness in every bite!</p>
-      </div>
+      <a href="donut.html" class="card-link">
+        <div class="recipe-card">
+          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS6bGkxH9YZuV7mFUiw6TEdzmhjRUsofd2eRg&s" alt="donuts" />
+          <h3>DONUTS</h3>
+          <p>A sweet circle of happiness in every bite!</p>
+        </div>
+      </a>
       <div class="recipe-card">
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTN6jKQfFJM7T-qTUTsNy6wkenebjdwju9xqg&s" alt="tiramisu" />
         <h3>TIRAMISU</h3>
