--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <h3>CHIA PUDDING</h3>
         <p>milk, chia seeds, sugar to taste, and vanilla</p>
       </div>
-      <a href="donut.html" class="card-link">
+      <a href="donuts.html" class="card-link">
         <div class="recipe-card">
           <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS6bGkxH9YZuV7mFUiw6TEdzmhjRUsofd2eRg&s" alt="donuts" />
           <h3>DONUTS</h3>
