--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <li><a href="#">🥦 VEG DISHES</a></li>
       <li><a href="#">🍩 DESSERTS</a></li>
       <li><a href="#">📖 ABOUT US</a></li>
-      <li><a href="contactus.html">📞 CONTACT</a></li>
+      <li><a href="contact.html">📞 CONTACT</a></li>
       <li><a href="review.html">💬 REVIEW</a></li>
     </ul>
   </div>
