Update dal_tadka.html-linked css

--- a/dal_tadka.html
+++ b/dal_tadka.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Dal Tadka Recipe</title>
+  <link rel="stylesheet" href="daltadka.css">
 </head>
 <body>
 <nav class="navbar">
