link font and add review

--- a/dal_tadka.html
+++ b/dal_tadka.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Dal Tadka Recipe</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link rel="stylesheet" href="daltadka.css">
 </head>
 <body>
@@ -11,11 +12,11 @@
     <div class="logo" aria-label="Bitelicious logo">🌿 <strong>BITELICIOUS</strong></div>
     <!-- Nav Links -->
     <ul class="nav-links" id="nav-links">
-      <li><a href="INDEX.html">🏠 HOME</a></li>
+      <li><a href="index.html">🏠 HOME</a></li>
       <li><a href="#">🥦 VEG DISHES</a></li>
       <li><a href="#">🍩 DESSERTS</a></li>
       <li><a href="#">📖 ABOUT US</a></li>
-      <li><a href="contactus.html">📞 CONTACT</a></li>
+      <li><a href="contact.html">📞 CONTACT</a></li>
       <li><a href="review.html">💬 REVIEW</a></li>
     </ul>
   </div>
@@ -58,6 +59,17 @@
     <li>Simmer for a few minutes. Garnish with coriander leaves.</li>
     <li>Serve hot with steamed rice or roti.</li>
   </ol>
+  <section>
+
+  <article>
+    <p><strong>⭐⭐⭐⭐⭐ – Anju S.</strong><br>"Bitelicious helped me discover the perfect dal tadka recipe! It tasted just like the one my mom used to make. The steps were easy to follow and the flavors were spot on!"</p>
+  </article>
+
+  <article>
+    <p><strong>⭐⭐⭐⭐ – Ankit R.</strong><br>"I’m a beginner in the kitchen, but this recipe made me feel like a pro. The ingredient list and timing tips were super helpful. Definitely trying more dishes from Bitelicious!"</p>
+  </article>
+
+</section>
    <h2>FAQs:</h2>
   <section>
     <p><strong>Q: Can I use moong dal instead of toor dal?</strong><br>
