--- a/dal_tadka.html
+++ b/dal_tadka.html
@@ -23,8 +23,8 @@
 </nav>
   <h1>Dal Tadka</h1>
   <h3>“Simple Ingredients. Explosive Flavor. That’s Dal Tadka.”</h3>
-  <section>
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ6Hq83K8hexV3R1IKS7blIRoIMOjmAktjS3Q&s" alt="Donuts" width="300">
+  <section class="details">
+    
     <p><i class="fas fa-users"></i> <strong>Serves:</strong> 2-3 people</p>
     <p><i class="fas fa-clock"></i> <strong>Prep Time:</strong> 20 minutes</p>
     <p><i class="fas fa-hourglass-half"></i> <strong>Rest Time:</strong> 1 hour</p>
