--- a/about.html
+++ b/about.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us - Bitelicious</title>
+  <link rel="stylesheet" href="about.css" />
+  
 </head>
 <body>
 <!-- Navbar -->
@@ -21,6 +23,18 @@
       </ul>
     </div>
 </nav>
+    <main>
+    <section>
+        <h2>About Us</h2>
+        <p>Welcome to <strong>Bitelicious</strong> – your personalized recipe finder that makes discovering vegetarian meals and sweet delights easier and more fun than ever. Whether you're craving a healthy home-cooked dinner or looking for a new dessert to impress your guests, Bitelicious has your back!</p>
+
+        <p>Bitelicious is more than just a recipe app – it's a food lover's companion. With an easy-to-use interface and a constantly growing library of plant-based and dessert recipes, we help you cook with confidence, even if you’re just starting your culinary journey.</p>
+    </section>
+
+    <section>
+        <h3>Our Mission</h3>
+        <p>Our mission at Bitelicious is to bring flavorful, nutritious, and affordable vegetarian cooking into every kitchen. We believe that good food should be accessible, fun to make, and kind to both your body and the planet.</p>
+    </section>
 <footer>
     <p>&copy; 2025 Bitelicious. All rights reserved.</p>
 </footer>
