Update index.html- linked .html file for recipe

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
         <h3>Masala Dosa</h3>
         <p>Fermented rice & urad dal batter, potato masala, spices</p>
       </div>
+       <a href="dal_tadka.html" class="card-link">
       <div class="recipe-card">
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSASWoGdCJ9PrJC53RVX-lkpVivpD_acxLYJQ&s" alt="Dal Tadka" />
         <h3>DAL TADKA</h3>
