add what we offer

--- a/about.html
+++ b/about.html
@@ -35,6 +35,16 @@
         <h3>Our Mission</h3>
         <p>Our mission at Bitelicious is to bring flavorful, nutritious, and affordable vegetarian cooking into every kitchen. We believe that good food should be accessible, fun to make, and kind to both your body and the planet.</p>
     </section>
+        <section>
+        <h3>What We Offer</h3>
+        <ul>
+            <li>A curated collection of vegetarian and dessert recipes</li>
+            <li>Ingredient-based search to find recipes with what you have at home</li>
+            <li>Quick and easy instructions for all skill levels</li>
+            <li>Healthy options, traditional favorites, and creative new dishes</li>
+            <li>User reviews and feedback to help you pick the best recipes</li>
+        </ul>
+    </section>
 <footer>
     <p>&copy; 2025 Bitelicious. All rights reserved.</p>
 </footer>
