--- a/about.html
+++ b/about.html
@@ -45,6 +45,21 @@
             <li>User reviews and feedback to help you pick the best recipes</li>
         </ul>
     </section>
+         <section>
+        <h3>Why Bitelicious?</h3>
+        <p>We created Bitelicious to solve a simple problem: "What should I cook today?" With so many recipes out there, we wanted to build a space where simplicity meets inspiration, and every recipe feels like a trusted friend. Our focus is on vegetarian food because we believe plant-powered meals can be just as indulgent, satisfying, and exciting.</p>
+    </section>
+
+    <section>
+        <h3>Meet the Team</h3>
+        <p>We’re a small team of food enthusiasts, developers, and designers with a shared passion for cooking and creativity. Every feature of Bitelicious is designed with care, based on what real users need in the kitchen.</p>
+    </section>
+
+    <section>
+        <h3>Join the Bitelicious Community</h3>
+        <p>We love hearing from our users! Share your favorite recipes, leave reviews, or connect with us through our contact page. Let's cook up something amazing together. 🍽️</p>
+    </section>
+</main>
 <footer>
     <p>&copy; 2025 Bitelicious. All rights reserved.</p>
 </footer>
