--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
   <p>
     <a href="#">Instagram</a> |
     <a href="#">Facebook</a> |
-    <a href="#">Contact Us</a>
+    <a href="contact.html">Contact Us</a>
   </p>
 </footer>
 
