--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
         <h3>Masala Dosa</h3>
         <p>Fermented rice & urad dal batter, potato masala, spices</p>
       </div>
-      <a href="dal_tadka.html" class="card-link">
+        <a href="dal_tadka.html" class="card-link">
         <div class="recipe-card">
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSASWoGdCJ9PrJC53RVX-lkpVivpD_acxLYJQ&s" alt="Dal Tadka" />
         <h3>DAL TADKA</h3>
         <p>Comforting and nutritious yellow dal</p>
-      </div>
+      </div></a>
       <div class="recipe-card">
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRf5JxXN3yIx-B6GoyV4163mwyJ-WjxMa7iyQ&s" alt="Veg Samosa" />
         <h3>SAMOSA</h3>
