recipe info and ingredients

--- a/guccamole.html
+++ b/guccamole.html
@@ -14,6 +14,26 @@
       <h3>"Smash it, scoop it, love it — Guacamole goodness!"</h3>
     </div>
   </header>
-  
+  <!-- Recipe Details -->
+<section class="recipe-info">
+    <p><i class="fas fa-users"></i> <strong>Serves:</strong> 4–6 people</p>
+    <p><i class="fas fa-clock"></i> <strong>Prep Time:</strong> 10 minutes</p>
+    <p><i class="fas fa-hourglass-half"></i> <strong>Rest Time:</strong> Optional (15–30 minutes for better flavor)</p>
+    <p><i class="fas fa-fire"></i> <strong>Cooking Time:</strong> None (No cooking needed!)</p>
+</section>
+
+
+<h2>Ingredients:</h2>
+<ul>
+    <li>3 ripe avocados</li>
+    <li>1 lime, juiced</li>
+    <li>1 teaspoon salt</li>
+    <li>1/2 cup diced onion</li>
+    <li>3 tablespoons chopped cilantro</li>
+    <li>2 roma tomatoes, diced</li>
+    <li>1 teaspoon minced garlic</li>
+    <li>1 pinch ground cayenne pepper (optional)</li>
+</ul>
+
 </body>
 </html>
