instruction and reviews

--- a/guccamole.html
+++ b/guccamole.html
@@ -34,6 +34,25 @@
     <li>1 teaspoon minced garlic</li>
     <li>1 pinch ground cayenne pepper (optional)</li>
 </ul>
+<h2>Instructions:</h2>
+<ol>
+    <li>Cut the avocados in half, remove the seed, and scoop out the flesh into a bowl.</li>
+    <li>Mash the avocado with a fork.</li>
+    <li>Add lime juice and salt. Mix well.</li>
+    <li>Add onion, cilantro, tomatoes, and garlic. Stir gently.</li>
+    <li>Add a pinch of cayenne pepper if you like a little spice.</li>
+    <li>Serve immediately or refrigerate for later.</li>
+</ol>
+
+<h2>Reviews:</h2>
+<section>
+  <article>
+    <p><strong>⭐⭐⭐⭐⭐ – Rohit J.</strong><br>"Absolutely delicious! So easy to make and very fresh tasting. Perfect with tortilla chips!"</p>
+  </article>
+  <article>
+    <p><strong>⭐⭐⭐⭐ – Raghu M.</strong><br>"Loved it! I added extra lime for a tangy twist. A big hit at our family gathering!"</p>
+  </article>
+</section>
 
 </body>
 </html>
