--- a/guccamole.html
+++ b/guccamole.html
@@ -53,6 +53,16 @@
     <p><strong>⭐⭐⭐⭐ – Raghu M.</strong><br>"Loved it! I added extra lime for a tangy twist. A big hit at our family gathering!"</p>
   </article>
 </section>
+<h2>FAQs:</h2>
+<section class="faq-box">
+  <p><strong>Q: Can I make guacamole ahead of time?</strong><br>
+  A: Yes! To keep it fresh, store it in an airtight container with a layer of plastic wrap directly on the surface to prevent browning.</p>
 
+  <p><strong>Q: What can I use instead of lime?</strong><br>
+  A: If you don’t have lime, you can use lemon juice for a similar tangy flavor.</p>
+
+  <p><strong>Q: How long does guacamole last?</strong><br>
+  A: Guacamole is best eaten fresh but can be stored in the fridge for up to 2 days.</p>
+</section>
 </body>
 </html>
