--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <li><a href="index.html">🏠 HOME</a></li>
       <li><a href="#">🥦 VEG DISHES</a></li>
       <li><a href="#">🍩 DESSERTS</a></li>
-      <li><a href="#">📖 ABOUT US</a></li>
+      <li><a href="about.html">📖 ABOUT US</a></li>
       <li><a href="contact.html">📞 CONTACT</a></li>
       <li><a href="review.html">💬 REVIEW</a></li>
     </ul>
