Update dal_tadka.html-added navbar

--- a/dal_tadka.html
+++ b/dal_tadka.html
@@ -7,15 +7,36 @@
   <link rel="stylesheet" href="daltadka.css">
 </head>
 <body>
-  <h1>Dal Tadka</h1>
-  <h3>“Simple Ingredients. Explosive Flavor. That’s Dal Tadka.”</h3>
+  <nav class="navbar">
+    <div class="navbar-container">
+      <div class="logo" aria-label="Bitelicious logo">🌿 <strong>BITELICIOUS</strong></div>
+      <ul class="nav-links" id="nav-links">
+        <li><a href="index.html">🏠 HOME</a></li>
+        <li><a href="#">🥦 VEG DISHES</a></li>
+        <li><a href="#">🍩 DESSERTS</a></li>
+        <li><a href="#">📖 ABOUT US</a></li>
+        <li><a href="contact.html">📞 CONTACT</a></li>
+        <li><a href="review.html">💬 REVIEW</a></li>
+      </ul>
+    </div>
+  </nav>
+
+  <!-- HERO SECTION -->
+  <section class="hero">
+    <div class="hero-content">
+      <h1>Dal Tadka</h1>
+      <h3>“Simple Ingredients. Explosive Flavor. That’s Dal Tadka.”</h3>
+    </div>
+  </section>
+
+  <!-- RECIPE INFO -->
   <section class="details">
-    
     <p><i class="fas fa-users"></i> <strong>Serves:</strong> 2-3 people</p>
     <p><i class="fas fa-clock"></i> <strong>Prep Time:</strong> 20 minutes</p>
     <p><i class="fas fa-hourglass-half"></i> <strong>Rest Time:</strong> 1 hour</p>
     <p><i class="fas fa-fire"></i> <strong>Cooking Time:</strong> 25 minutes</p>
   </section>
+
   <h2>Ingredients:</h2>
   <ul>
     <li>1 cup toor dal (pigeon peas)</li>
@@ -34,6 +55,7 @@
     <li>2 tbsp ghee or oil</li>
     <li>Fresh coriander leaves (chopped)</li>
   </ul>
+
   <h2>Instructions:</h2>
   <ol>
     <li>Rinse toor dal thoroughly. Pressure cook with water, turmeric, and a pinch of salt for 3-4 whistles until soft.</li>
@@ -45,7 +67,6 @@
     <li>Simmer for a few minutes. Garnish with coriander leaves.</li>
     <li>Serve hot with steamed rice or roti.</li>
   </ol>
-  <section>
 
   <article>
     <p><strong>⭐⭐⭐⭐⭐ – Anju S.</strong><br>"Bitelicious helped me discover the perfect dal tadka recipe! It tasted just like the one my mom used to make. The steps were easy to follow and the flavors were spot on!"</p>
@@ -55,8 +76,7 @@
     <p><strong>⭐⭐⭐⭐ – Ankit R.</strong><br>"I’m a beginner in the kitchen, but this recipe made me feel like a pro. The ingredient list and timing tips were super helpful. Definitely trying more dishes from Bitelicious!"</p>
   </article>
 
-</section>
-   <h2>FAQs:</h2>
+  <h2>FAQs:</h2>
   <section>
     <p><strong>Q: Can I use moong dal instead of toor dal?</strong><br>
     A: Yes, moong dal works well too. The flavor will be lighter and milder.</p>
@@ -70,6 +90,14 @@
     <p><strong>Q: How can I store leftovers?</strong><br>
     A: Store in an airtight container in the fridge for up to 2 days. Reheat before serving.</p>
   </section>
-  
+
+  <footer class="footer">
+    <p>Made with LOVE by <strong>OUR TEAM</strong> | &copy; 2025 <strong>BITELICIOUS</strong></p>
+    <p>
+      <a href="#">Instagram</a> |
+      <a href="#">Facebook</a> |
+      <a href="#">Contact Us</a>
+    </p>
+  </footer>
 </body>
 </html>
