--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       </div>
       <div class="recipe-card">
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQiTtSRPHcvjzBfFPkT1joclJAHs5BUtD3nig&s" alt="masala dosa" />
-        <h3>Masala Dosa</h3>
+        <h3>MASALA DOSA</h3>
         <p>Fermented rice & urad dal batter, potato masala, spices</p>
       </div>
         <a href="dal_tadka.html" class="card-link">
@@ -195,11 +195,13 @@
       <p>Flour tortillas filled with cheese, mushrooms, and veggies, grilled to perfection</p>
     </div>
     <!-- Guacamole -->
+     <a href="guccamole.html" class="card-link">
     <div class="recipe-card">
       <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTtYLZp6FlVB82UdZmVnYN1Ic21GVxAoMaA4g&s" alt="Guacamole" />
       <h3>GUACAMOLE</h3>
       <p>A refreshing avocado dip with lime, cilantro, tomatoes, and a dash of salt</p>
     </div>
+     </a>
     <!-- Sopes -->
     <div class="recipe-card">
       <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQsIlB3kRy7BMnd9zsxlCpKUjDZ5wKUjzWQIA&s" alt="Vegetarian Sopes" />
