Update index.html-Made minor changes

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <!-- Nav Links -->
     <ul class="nav-links" id="nav-links">
       <li><a href="index.html">🏠 HOME</a></li>
-      <li><a href="#">🥦 VEG DISHES</a></li>
-      <li><a href="#">🍩 DESSERTS</a></li>
+      <li><a href="#veg">🥦 VEG DISHES</a></li>
+      <li><a href="#desserts">🍩 DESSERTS</a></li>
       <li><a href="about.html">📖 ABOUT US</a></li>
       <li><a href="contact.html">📞 CONTACT</a></li>
       <li><a href="review.html">💬 REVIEW</a></li>
@@ -40,7 +40,7 @@
 
 
   <!-- Veg Recipes Section -->
-  <section class="recipes-section">
+  <section class="recipes-section" id="veg">
     <h2 class="section-title">BOLD BITES OF BHARAT</h2>
     <div class="recipes">
       <div class="recipe-card">
@@ -83,7 +83,7 @@
   </section>
 
   <!-- Dessert Section -->
-  <section class="recipes-section">
+  <section class="recipes-section" id="desserts">
     <h2 class="section-title">DUSTED & DELICIOUS</h2>
     <div class="recipes">
       <div class="recipe-card">
@@ -125,7 +125,7 @@
       </div>
     </div>
   </section>
-  <section class="recipes-section">
+  <section class="recipes-section" id="veg">
     <h2 class="section-title">SAPORI D’AMORE</h2>
     <div class="recipes">
       <div class="recipe-card">
@@ -219,7 +219,7 @@
 
  <!-- Footer -->
 <footer class="footer">
-  <p>Made with LOVE by <strong>OUR TEAM</strong> | &copy; 2025 <strong>BITELICIOUS</strong></p>
+  <p>Made with LOVE by <strong>OUR TEAM</strong> for<strong> FOOD LOVERS💗</strong> | &copy; 2025 <strong>BITELICIOUS</strong></p>
 
   <!-- Optional Links Section -->
   <p>
