--- a/donuts.html
+++ b/donuts.html
@@ -5,6 +5,7 @@
   <title>Donut Recipe</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link rel="stylesheet" href="donut.css">
+   <script src="donut.js"></script>
 </head>
 <body>
 
