--- a/donuts.html
+++ b/donuts.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Donut Recipe</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-   <script src="donut.js"></script>
+   <script src="donut.js" defer></script>
 
   <link rel="stylesheet" href="donut.css">
   
