Added header and icon

--- a/gnochi.html
+++ b/gnochi.html
@@ -7,6 +7,19 @@
   <link rel="stylesheet" href="gnochi.css">
 </head>
 <body>
-
+<!-- Hero Section with Background Gnocchi -->
+  <header class="hero">
+    <div class="hero-content">
+      <h1>GNOCCHI</h1>
+      <h3>“Pillow-Soft Perfection: Homemade Potato Gnocchi Recipe”</h3>
+    </div>
+  </header>
+  <!-- Recipe Details -->
+  <section class="recipe-info">
+    <p><i class="fas fa-users"></i> <strong>Serves:</strong> 4–6</p>
+    <p><i class="fas fa-clock"></i> <strong>Prep Time:</strong> 30 minutes</p>
+    <p><i class="fas fa-hourglass-half"></i> <strong>Rest Time:</strong> 15 minutes</p>
+    <p><i class="fas fa-fire"></i> <strong>Cooking Time:</strong> 5–7 minutes</p>
+  </section>
 </body>
 </html>
