--- a/gnochi.html
+++ b/gnochi.html
@@ -21,5 +21,25 @@
     <p><i class="fas fa-hourglass-half"></i> <strong>Rest Time:</strong> 15 minutes</p>
     <p><i class="fas fa-fire"></i> <strong>Cooking Time:</strong> 5–7 minutes</p>
   </section>
+  <h2>Ingredients:</h2>
+  <ul>
+    <li>2 pounds (900g) russet potatoes</li>
+    <li>1 1/2 cups all-purpose flour (plus more as needed)</li>
+    <li>1 tbsp olive oil</li>
+    <li>1 tsp salt</li>
+    <li>Optional: pinch of nutmeg or grated plant-based Parmesan</li>
+  </ul>
+  <h2>Instructions:</h2>
+  <ol>
+    <li>Boil whole potatoes until tender, about 20 minutes. Let cool slightly.</li>
+    <li>Peel and mash the potatoes while still warm.</li>
+    <li>Spread potatoes on a work surface, sprinkle with flour and salt, and drizzle with olive oil.</li>
+    <li>Knead gently to form a soft, cohesive dough. Avoid overworking.</li>
+    <li>Divide dough into ropes, cut into 1-inch pieces, and shape with a fork if desired.</li>
+    <li>Let gnocchi rest 15 minutes before cooking.</li>
+    <li>Boil in salted water until they float (2–3 minutes). Remove with a slotted spoon.</li>
+    <li>Serve with your favorite sauce – tomato, pesto, or butter sage (vegan if desired).</li>
+  </ol>
+
 </body>
 </html>
