Added Review and FAQS

--- a/gnochi.html
+++ b/gnochi.html
@@ -40,6 +40,27 @@
     <li>Boil in salted water until they float (2–3 minutes). Remove with a slotted spoon.</li>
     <li>Serve with your favorite sauce – tomato, pesto, or butter sage (vegan if desired).</li>
   </ol>
+<h2>Reviews:</h2>
+  <section>
+    <article>
+      <p><strong>⭐⭐⭐⭐⭐ – Priya</strong><br>"So fluffy and light! Never buying store-bought again."</p>
+    </article>
+    <article>
+      <p><strong>⭐⭐⭐⭐ – Dev</strong><br>"A comforting dish that’s now a weekend favorite."</p>
+    </article>
+  </section>
+
+  <h2>FAQs:</h2>
+  <section class="faq-box">
+    <p><strong>Q: Can I freeze the gnocchi?</strong><br>
+    A: Yes! Freeze on a tray, then store in a bag. Boil straight from frozen.</p>
+
+    <p><strong>Q: Do I need to use russet potatoes?</strong><br>
+    A: Yes, for the fluffiest texture. Waxy potatoes make the dough sticky.</p>
+
+    <p><strong>Q: Can I make this gluten-free?</strong><br>
+    A: Use a 1:1 gluten-free flour blend. Results may vary slightly.</p>
+  </section>
 
 </body>
 </html>
