--- a/donuts.html
+++ b/donuts.html
@@ -16,12 +16,12 @@
     <div class="navbar-container">
       <div class="logo" aria-label="Bitelicious logo">🌿 <strong>BITELICIOUS</strong></div>
       <ul class="nav-links">
-        <li><a href="#">🏠 HOME</a></li>
+        <li><a href="index.html">🏠 HOME</a></li>
         <li><a href="#">🥦 VEG DISHES</a></li>
         <li><a href="#">🍩 DESSERTS</a></li>
-        <li><a href="#">📖 ABOUT US</a></li>
-        <li><a href="#">📞 CONTACT</a></li>
-        <li><a href="#">💬 REVIEW</a></li>
+        <li><a href="about.html">📖 ABOUT US</a></li>
+        <li><a href="contact.html">📞 CONTACT</a></li>
+        <li><a href="review.html">💬 REVIEW</a></li>
       </ul>
     </div>
   </nav>
