--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us - Bitelicious</title>
   <link rel="stylesheet" href="about.css" />
-  
+  <script src="about.js"></script>
 </head>
 <body>
     <main>
