--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
         <h3>PESTO PASTA</h3>
         <p>Fresh basil, garlic & pine nuts blended to perfection 💚</p>
       </div>
+      <a href="gnochi.html" class="card-link">
       <div class="recipe-card">
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSqwPS7EaiuVmKaMZecetmzBr-ZMR604ruzmw&s" alt="Potato Gnocchi" />
         <h3>GNOCCHI</h3>
