Add links to connect page

--- a/dal_tadka.html
+++ b/dal_tadka.html
@@ -12,9 +12,9 @@
       <div class="logo" aria-label="Bitelicious logo">🌿 <strong>BITELICIOUS</strong></div>
       <ul class="nav-links" id="nav-links">
         <li><a href="index.html">🏠 HOME</a></li>
-        <li><a href="#">🥦 VEG DISHES</a></li>
-        <li><a href="#">🍩 DESSERTS</a></li>
-        <li><a href="#">📖 ABOUT US</a></li>
+        <li><a href="#veg">🥦 VEG DISHES</a></li>
+        <li><a href="#desserts">🍩 DESSERTS</a></li>
+        <li><a href="about.html">📖 ABOUT US</a></li>
         <li><a href="contact.html">📞 CONTACT</a></li>
         <li><a href="review.html">💬 REVIEW</a></li>
       </ul>
@@ -96,7 +96,7 @@
     <p>
       <a href="#">Instagram</a> |
       <a href="#">Facebook</a> |
-      <a href="#">Contact Us</a>
+      <a href="contact.html">Contact Us</a>
     </p>
   </footer>
 </body>
