Add footer and links

--- a/donuts.html
+++ b/donuts.html
@@ -17,8 +17,8 @@
       <div class="logo" aria-label="Bitelicious logo">🌿 <strong>BITELICIOUS</strong></div>
       <ul class="nav-links">
         <li><a href="index.html">🏠 HOME</a></li>
-        <li><a href="#">🥦 VEG DISHES</a></li>
-        <li><a href="#">🍩 DESSERTS</a></li>
+        <li><a href="#veg">🥦 VEG DISHES</a></li>
+        <li><a href="#desserts">🍩 DESSERTS</a></li>
         <li><a href="about.html">📖 ABOUT US</a></li>
         <li><a href="contact.html">📞 CONTACT</a></li>
         <li><a href="review.html">💬 REVIEW</a></li>
@@ -89,5 +89,13 @@
     <p><strong>Q: Can I freeze the dough?</strong><br>
     A: Yes! Freeze after shaping. Thaw and rise before frying.</p>
   </section>
+  <footer class="footer">
+    <p>Made with LOVE by <strong>OUR TEAM</strong> | &copy; 2025 <strong>BITELICIOUS</strong></p>
+    <p>
+      <a href="#">Instagram</a> |
+      <a href="#">Facebook</a> |
+      <a href="contact.html">Contact Us</a>
+    </p>
+  </footer>
 </body>
 </html>
