Add navbar and footer

--- a/gnochi.html
+++ b/gnochi.html
@@ -14,6 +14,20 @@
       <h3>“Pillow-Soft Perfection: Homemade Potato Gnocchi Recipe”</h3>
     </div>
   </header>
+  <nav class="navbar">
+    <div class="navbar-container">
+      <div class="logo" aria-label="Bitelicious logo">🌿 <strong>BITELICIOUS</strong></div>
+      <ul class="nav-links" id="nav-links">
+        <li><a href="index.html">🏠 HOME</a></li>
+        <li><a href="#veg">🥦 VEG DISHES</a></li>
+        <li><a href="#desserts">🍩 DESSERTS</a></li>
+        <li><a href="about.html">📖 ABOUT US</a></li>
+        <li><a href="contact.html">📞 CONTACT</a></li>
+        <li><a href="review.html">💬 REVIEW</a></li>
+      </ul>
+    </div>
+  </nav>
+
   <!-- Recipe Details -->
   <section class="recipe-info">
     <p><i class="fas fa-users"></i> <strong>Serves:</strong> 4–6</p>
@@ -61,6 +75,15 @@
     <p><strong>Q: Can I make this gluten-free?</strong><br>
     A: Use a 1:1 gluten-free flour blend. Results may vary slightly.</p>
   </section>
+<footer class="footer">
+  <p>Made with LOVE by <strong>OUR TEAM</strong> | &copy; 2025 <strong>BITELICIOUS</strong></p>
 
+  <!-- Optional Links Section -->
+  <p>
+    <a href="#">Instagram</a> |
+    <a href="#">Facebook</a> |
+    <a href="contact.html">Contact Us</a>
+  </p>
+</footer>
 </body>
 </html>
