--- a/guccamole.html
+++ b/guccamole.html
@@ -1,20 +1,32 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Guacamole Recipe</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Guccamole Recipe</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="stylesheet" href="guccamole.css">
 </head>
 <body>
 
- <!-- Hero Section with Background Donut -->
- <header class="hero">
+<!-- Welcome Message Popup -->
+<div class="welcome-popup" id="welcomePopup">
+    <div class="popup-content">
+        <h2>Welcome to Bitelicious!</h2>
+        <p>We are thrilled to have you here. Enjoy our delicious recipes!</p>
+        <button onclick="closeWelcomePopup()">Close</button>
+    </div>
+</div>
+
+<!-- Hero Section with Background Donut -->
+<header class="hero">
     <div class="hero-content">
       <h1>GUCCAMOLE</h1>
-      <h3>"Smash it, scoop it, love it — Guacamole goodness!"</h3>
+      <h3>"Smash it, scoop it, love it — Guccamole goodness!"</h3>
     </div>
-  </header>
-  <!-- Recipe Details -->
+</header>
+
+<!-- Recipe Info Section -->
 <section class="recipe-info">
     <p><i class="fas fa-users"></i> <strong>Serves:</strong> 4–6 people</p>
     <p><i class="fas fa-clock"></i> <strong>Prep Time:</strong> 10 minutes</p>
@@ -22,47 +34,70 @@
     <p><i class="fas fa-fire"></i> <strong>Cooking Time:</strong> None (No cooking needed!)</p>
 </section>
 
-
-<h2>Ingredients:</h2>
-<ul>
-    <li>3 ripe avocados</li>
-    <li>1 lime, juiced</li>
-    <li>1 teaspoon salt</li>
-    <li>1/2 cup diced onion</li>
-    <li>3 tablespoons chopped cilantro</li>
-    <li>2 roma tomatoes, diced</li>
-    <li>1 teaspoon minced garlic</li>
-    <li>1 pinch ground cayenne pepper (optional)</li>
-</ul>
-<h2>Instructions:</h2>
-<ol>
-    <li>Cut the avocados in half, remove the seed, and scoop out the flesh into a bowl.</li>
-    <li>Mash the avocado with a fork.</li>
-    <li>Add lime juice and salt. Mix well.</li>
-    <li>Add onion, cilantro, tomatoes, and garlic. Stir gently.</li>
-    <li>Add a pinch of cayenne pepper if you like a little spice.</li>
-    <li>Serve immediately or refrigerate for later.</li>
-</ol>
-
-<h2>Reviews:</h2>
-<section>
-  <article>
-    <p><strong>⭐⭐⭐⭐⭐ – Rohit J.</strong><br>"Absolutely delicious! So easy to make and very fresh tasting. Perfect with tortilla chips!"</p>
-  </article>
-  <article>
-    <p><strong>⭐⭐⭐⭐ – Raghu M.</strong><br>"Loved it! I added extra lime for a tangy twist. A big hit at our family gathering!"</p>
-  </article>
+<!-- Ingredients Section -->
+<section class="ingredients">
+    <h2>Ingredients:</h2>
+    <ul>
+        <li>3 ripe avocados</li>
+        <li>1 lime, juiced</li>
+        <li>1 teaspoon salt</li>
+        <li>1/2 cup diced onion</li>
+        <li>3 tablespoons chopped cilantro</li>
+        <li>2 roma tomatoes, diced</li>
+        <li>1 teaspoon minced garlic</li>
+        <li>1 pinch ground cayenne pepper (optional)</li>
+    </ul>
 </section>
-<h2>FAQs:</h2>
+
+<!-- Instructions Section -->
+<section class="instructions">
+    <h2>Instructions:</h2>
+    <ol>
+        <li>Cut the avocados in half, remove the seed, and scoop out the flesh into a bowl.</li>
+        <li>Mash the avocado with a fork.</li>
+        <li>Add lime juice and salt. Mix well.</li>
+        <li>Add onion, cilantro, tomatoes, and garlic. Stir gently.</li>
+        <li>Add a pinch of cayenne pepper if you like a little spice.</li>
+        <li>Serve immediately or refrigerate for later.</li>
+    </ol>
+</section>
+
+<!-- Reviews Section -->
+<section class="reviews">
+    <h2>Reviews:</h2>
+    <article>
+        <p><strong>⭐⭐⭐⭐⭐ – Rohit J.</strong><br>"Absolutely delicious! So easy to make and very fresh tasting. Perfect with tortilla chips!"</p>
+    </article>
+    <article>
+        <p><strong>⭐⭐⭐⭐ – Raghu M.</strong><br>"Loved it! I added extra lime for a tangy twist. A big hit at our family gathering!"</p>
+    </article>
+</section>
+
+<!-- FAQ Section -->
 <section class="faq-box">
-  <p><strong>Q: Can I make guacamole ahead of time?</strong><br>
-  A: Yes! To keep it fresh, store it in an airtight container with a layer of plastic wrap directly on the surface to prevent browning.</p>
+    <h2>FAQs:</h2>
+    <p><strong>Q: Can I make guccamole ahead of time?</strong><br>
+    A: Yes! To keep it fresh, store it in an airtight container with a layer of plastic wrap directly on the surface to prevent browning.</p>
 
-  <p><strong>Q: What can I use instead of lime?</strong><br>
-  A: If you don’t have lime, you can use lemon juice for a similar tangy flavor.</p>
+    <p><strong>Q: What can I use instead of lime?</strong><br>
+    A: If you don’t have lime, you can use lemon juice for a similar tangy flavor.</p>
 
-  <p><strong>Q: How long does guacamole last?</strong><br>
-  A: Guacamole is best eaten fresh but can be stored in the fridge for up to 2 days.</p>
+    <p><strong>Q: How long does guccamole last?</strong><br>
+    A: Guccamole is best eaten fresh but can be stored in the fridge for up to 2 days.</p>
 </section>
+
+<!-- Send Recipe Button -->
+<button id="sendRecipeButton">Send Recipe</button>
+
+<!-- Popup -->
+<div class="popup" id="popup">
+    <div class="popup-content">
+        <h2>Recipe Sent!</h2>
+        <p>Your Guccamole recipe has been sent to your email.</p>
+        <button onclick="closePopup()">Close</button>
+    </div>
+</div>
+
+<script src="guccamole.js"></script>
 </body>
 </html>
