Update guccamole.html-adding animation

--- a/guccamole.html
+++ b/guccamole.html
@@ -24,9 +24,9 @@
       <h1>GUCCAMOLE</h1>
       <h3>"Smash it, scoop it, love it — Guccamole goodness!"</h3>
     </div>
-</header>
-
-<!-- Recipe Info Section -->
+  </header>
+  
+<!-- Recipe Details -->
 <section class="recipe-info">
     <p><i class="fas fa-users"></i> <strong>Serves:</strong> 4–6 people</p>
     <p><i class="fas fa-clock"></i> <strong>Prep Time:</strong> 10 minutes</p>
@@ -34,56 +34,48 @@
     <p><i class="fas fa-fire"></i> <strong>Cooking Time:</strong> None (No cooking needed!)</p>
 </section>
 
-<!-- Ingredients Section -->
-<section class="ingredients">
-    <h2>Ingredients:</h2>
-    <ul>
-        <li>3 ripe avocados</li>
-        <li>1 lime, juiced</li>
-        <li>1 teaspoon salt</li>
-        <li>1/2 cup diced onion</li>
-        <li>3 tablespoons chopped cilantro</li>
-        <li>2 roma tomatoes, diced</li>
-        <li>1 teaspoon minced garlic</li>
-        <li>1 pinch ground cayenne pepper (optional)</li>
-    </ul>
+<h2>Ingredients:</h2>
+<ul>
+    <li>3 ripe avocados</li>
+    <li>1 lime, juiced</li>
+    <li>1 teaspoon salt</li>
+    <li>1/2 cup diced onion</li>
+    <li>3 tablespoons chopped cilantro</li>
+    <li>2 roma tomatoes, diced</li>
+    <li>1 teaspoon minced garlic</li>
+    <li>1 pinch ground cayenne pepper (optional)</li>
+</ul>
+
+<h2>Instructions:</h2>
+<ol>
+    <li>Cut the avocados in half, remove the seed, and scoop out the flesh into a bowl.</li>
+    <li>Mash the avocado with a fork.</li>
+    <li>Add lime juice and salt. Mix well.</li>
+    <li>Add onion, cilantro, tomatoes, and garlic. Stir gently.</li>
+    <li>Add a pinch of cayenne pepper if you like a little spice.</li>
+    <li>Serve immediately or refrigerate for later.</li>
+</ol>
+
+<h2>Reviews:</h2>
+<section>
+  <article>
+    <p><strong>⭐⭐⭐⭐⭐ – Rohit J.</strong><br>"Absolutely delicious! So easy to make and very fresh tasting. Perfect with tortilla chips!"</p>
+  </article>
+  <article>
+    <p><strong>⭐⭐⭐⭐ – Raghu M.</strong><br>"Loved it! I added extra lime for a tangy twist. A big hit at our family gathering!"</p>
+  </article>
 </section>
 
-<!-- Instructions Section -->
-<section class="instructions">
-    <h2>Instructions:</h2>
-    <ol>
-        <li>Cut the avocados in half, remove the seed, and scoop out the flesh into a bowl.</li>
-        <li>Mash the avocado with a fork.</li>
-        <li>Add lime juice and salt. Mix well.</li>
-        <li>Add onion, cilantro, tomatoes, and garlic. Stir gently.</li>
-        <li>Add a pinch of cayenne pepper if you like a little spice.</li>
-        <li>Serve immediately or refrigerate for later.</li>
-    </ol>
-</section>
-
-<!-- Reviews Section -->
-<section class="reviews">
-    <h2>Reviews:</h2>
-    <article>
-        <p><strong>⭐⭐⭐⭐⭐ – Rohit J.</strong><br>"Absolutely delicious! So easy to make and very fresh tasting. Perfect with tortilla chips!"</p>
-    </article>
-    <article>
-        <p><strong>⭐⭐⭐⭐ – Raghu M.</strong><br>"Loved it! I added extra lime for a tangy twist. A big hit at our family gathering!"</p>
-    </article>
-</section>
-
-<!-- FAQ Section -->
+<h2>FAQs:</h2>
 <section class="faq-box">
-    <h2>FAQs:</h2>
-    <p><strong>Q: Can I make guccamole ahead of time?</strong><br>
-    A: Yes! To keep it fresh, store it in an airtight container with a layer of plastic wrap directly on the surface to prevent browning.</p>
+  <p><strong>Q: Can I make guccamole ahead of time?</strong><br>
+  A: Yes! To keep it fresh, store it in an airtight container with a layer of plastic wrap directly on the surface to prevent browning.</p>
 
-    <p><strong>Q: What can I use instead of lime?</strong><br>
-    A: If you don’t have lime, you can use lemon juice for a similar tangy flavor.</p>
+  <p><strong>Q: What can I use instead of lime?</strong><br>
+  A: If you don’t have lime, you can use lemon juice for a similar tangy flavor.</p>
 
-    <p><strong>Q: How long does guccamole last?</strong><br>
-    A: Guccamole is best eaten fresh but can be stored in the fridge for up to 2 days.</p>
+  <p><strong>Q: How long does guccamole last?</strong><br>
+  A: Guccamole is best eaten fresh but can be stored in the fridge for up to 2 days.</p>
 </section>
 
 <!-- Send Recipe Button -->
