Added navbar and footer

--- a/guccamole.html
+++ b/guccamole.html
@@ -15,6 +15,21 @@
     </div>
   </header>
 <!-- Recipe Details -->
+    <nav class="navbar">
+  <div class="navbar-container">
+    <div class="logo" aria-label="Bitelicious logo">🌿 <strong>BITELICIOUS</strong></div>
+    <!-- Nav Links -->
+    <ul class="nav-links" id="nav-links">
+      <li><a href="index.html">🏠 HOME</a></li>
+      <li><a href="#veg">🥦 VEG DISHES</a></li>
+      <li><a href="#desserts">🍩 DESSERTS</a></li>
+      <li><a href="about.html">📖 ABOUT US</a></li>
+      <li><a href="contact.html">📞 CONTACT</a></li>
+      <li><a href="review.html">💬 REVIEW</a></li>
+    </ul>
+  </div>
+</nav>
+
 <section class="recipe-info">
     <p><i class="fas fa-users"></i> <strong>Serves:</strong> 4–6 people</p>
     <p><i class="fas fa-clock"></i> <strong>Prep Time:</strong> 10 minutes</p>
@@ -66,6 +81,16 @@
   <p><strong>Q: How long does guacamole last?</strong><br>
   A: Guacamole is best eaten fresh but can be stored in the fridge for up to 2 days.</p>
 </section>
+<footer class="footer">
+  <p>Made with LOVE by <strong>OUR TEAM</strong> | &copy; 2025 <strong>BITELICIOUS</strong></p>
+
+  <!-- Optional Links Section -->
+  <p>
+    <a href="#">Instagram</a> |
+    <a href="#">Facebook</a> |
+    <a href="contact.html">Contact Us</a>
+  </p>
+</footer>
 
 </body>
 </html>
