--- a/guccamole.html
+++ b/guccamole.html
@@ -3,6 +3,7 @@
 <head>
     <title>Guacamole Recipe</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <script src="guccamole.js"></script>
     <link rel="stylesheet" href="guccamole.css">
 </head>
 <body>
@@ -91,6 +92,5 @@
     <a href="contact.html">Contact Us</a>
   </p>
 </footer>
-
 </body>
 </html>
