--- a/dal_tadka.html
+++ b/dal_tadka.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Dal Tadka Recipe</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <script src="daltadka.js"></script>
   <link rel="stylesheet" href="daltadka.css">
 </head>
 <body>
